# This file is part of moulars.
#
# moulars is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# moulars is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with moulars.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "moulars"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.63"   # Maintain compatibility with Debian 12

[dependencies]
base64 = "0.13"
byteorder = "1.3"
clap = "4.0"
env_logger = "0.9"
flate2 = "1.0"
form_urlencoded = "1.1"
hex = "0.4.3"
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
log = "0.4"
md-5 = "0.10.1"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-derive = "0.3"
num-prime = "0.4"
num-traits = "0.2"
once_cell = "1.17"
paste = "1.0"
rand = "0.8.5"
rc4 = "0.1.0"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5.11"
unicase = "2.6"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
