# This file is part of moulars.
#
# moulars is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# moulars is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with moulars.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "moulars"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byteorder = "1.3"
clap = { version = "4.0", features = ["derive"] }
data-encoding = "2.0"
flate2 = "1.0"
form_urlencoded = "1.1"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "server-graceful", "tokio"] }
md-5 = "0.10.1"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-derive = "0.4"
num-prime = "0.4"
num-traits = "0.2"
paste = "1.0"
rand = "0.8.5"      # 0.9+ blocked by num-bigint
rc4 = "0.1.0"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = "0.10"
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicase = "2.6"
uuid = { version = "1.2.1", features = ["v4", "v7", "fast-rng"] }

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres", "sqlite", "tls-native-tls", "uuid"]
default-features = false
